// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checked-color prop 1`] = `
<div role="radiogroup" class="buri-radio-group">
  <div role="radio" tabindex="0" aria-checked="true" class="buri-radio">
    <div class="buri-radio__icon buri-radio__icon--round buri-radio__icon--checked"><i class="buri-icon buri-icon-success" style="border-color: black; background-color: black;">
        <!----></i></div><span class="buri-radio__label">label</span>
  </div>
  <div role="radio" tabindex="0" aria-checked="true" class="buri-radio">
    <div class="buri-radio__icon buri-radio__icon--round buri-radio__icon--checked"><i class="buri-icon buri-icon-success" style="border-color: white; background-color: white;">
        <!----></i></div><span class="buri-radio__label">label</span>
  </div>
</div>
`;

exports[`icon-size prop 1`] = `
<div role="radiogroup" class="buri-radio-group">
  <div role="radio" tabindex="0" aria-checked="true" class="buri-radio">
    <div class="buri-radio__icon buri-radio__icon--round buri-radio__icon--checked" style="font-size: 10rem;"><i class="buri-icon buri-icon-success">
        <!----></i></div><span class="buri-radio__label">label</span>
  </div>
  <div role="radio" tabindex="0" aria-checked="true" class="buri-radio">
    <div class="buri-radio__icon buri-radio__icon--round buri-radio__icon--checked" style="font-size: 5rem;"><i class="buri-icon buri-icon-success">
        <!----></i></div><span class="buri-radio__label">label</span>
  </div>
</div>
`;
